Made this faster
