# app/controllers/api/v3/dashboards/countries_controller.rb
@@ -9,6 +9,7 @@ module Api
           @countries = FilterCountries.new(filter_params).call
           render json: @countries,
                  root: 'data',
+                 meta: FilterSourcesMeta.new(filter_params.slice(:countries_ids, :commodities_ids)).call,
                  each_serializer: Api::V3::Dashboards::CountrySerializer
         end
       end
