# app/controllers/concerns/api/v3/dashboards/filter_params.rb
@@ -12,7 +12,8 @@ module Api
             commodities_ids: cs_string_to_int_array(params[:commodities_ids]),
             sources_ids: cs_string_to_int_array(params[:sources_ids]),
             companies_ids: cs_string_to_int_array(params[:companies_ids]),
-            destinations_ids: cs_string_to_int_array(params[:destinations_ids])
+            destinations_ids: cs_string_to_int_array(params[:destinations_ids]),
+            node_types_ids: cs_string_to_int_array(params[:node_types_ids])
           }
         end
 
