# app/models/api/v3/readonly/dashboards/company.rb
@@ -6,13 +6,18 @@
 #  name         :text
 #  node_type_id :integer
 #  node_type    :text
-#  flow_id      :integer
+#  country_id   :integer
+#  commodity_id :integer
+#  node_id      :integer
 #
 # Indexes
 #
-#  index_dashboards_companies_mv_on_flow_id                    (flow_id)
-#  index_dashboards_companies_mv_on_flow_id_and_id             (flow_id,id) UNIQUE
-#  index_dashboards_companies_mv_on_id_and_name_and_node_type  (id,name,node_type)
+#  dashboards_companies_mv_commodity_id_idx   (commodity_id)
+#  dashboards_companies_mv_country_id_idx     (country_id)
+#  dashboards_companies_mv_group_columns_idx  (id,name,node_type)
+#  dashboards_companies_mv_node_id_idx        (node_id)
+#  dashboards_companies_mv_node_type_id_idx   (node_type_id)
+#  dashboards_companies_mv_unique_idx         (id,node_id,country_id,commodity_id) UNIQUE
 #
 
 module Api
