# app/models/api/v3/readonly/dashboards/source.rb
@@ -8,13 +8,18 @@
 #  node_type        :text
 #  parent_node_type :text
 #  parent_name      :text
-#  flow_id          :integer
+#  country_id       :integer
+#  commodity_id     :integer
+#  node_id          :integer
 #
 # Indexes
 #
-#  index_dashboards_sources_mv_on_flow_id                    (flow_id)
-#  index_dashboards_sources_mv_on_flow_id_and_id             (flow_id,id) UNIQUE
-#  index_dashboards_sources_mv_on_id_and_name_and_node_type  (id,name,node_type)
+#  dashboards_sources_mv_commodity_id_idx   (commodity_id)
+#  dashboards_sources_mv_country_id_idx     (country_id)
+#  dashboards_sources_mv_group_columns_idx  (id,name,node_type,parent_name,parent_node_type)
+#  dashboards_sources_mv_node_id_idx        (node_id)
+#  dashboards_sources_mv_node_type_id_idx   (node_type_id)
+#  dashboards_sources_unique_idx            (id,node_id,country_id,commodity_id) UNIQUE
 #
 
 module Api
