# app/services/api/v3/dashboards/base_filter.rb
@@ -2,15 +2,31 @@ module Api
   module V3
     module Dashboards
       class BaseFilter
-        # @param (see FilterFlowPaths#initialize)
+        # @param params [Hash]
+        # @option params [Array<Integer>] countries_ids
+        # @option params [Array<Integer>] commodities_ids
+        # @option params [Array<Integer>] sources_ids
+        # @option params [Array<Integer>] companies_ids
+        # @option params [Array<Integer>] destinations_ids
+        # @option params [Array<Integer>] node_types_ids
         def initialize(params)
-          @flow_paths_filter = FilterFlowPaths.new(params)
+          @countries_ids = params[:countries_ids] || []
+          @commodities_ids = params[:commodities_ids] || []
+          @node_ids = (params[:sources_ids] || []) +
+            (params[:companies_ids] || []) +
+            (params[:destinations_ids] || [])
+          @node_types_ids = params[:node_types_ids] || []
+          @filtered = false
           initialize_query
+          apply_filters
         end
 
         def call
-          filter_by_flows
           @query
+        end
+
+        def filtered?
+          @filtered
         end
 
         private
@@ -22,11 +38,39 @@ module Api
           raise NotImplementedError
         end
 
-        def filter_by_flows
-          return unless @flow_paths_filter.filtered?
+        def apply_filters
+          filter_by_countries
+          filter_by_commodities
+          filter_by_nodes
+          filter_by_node_types
+        end
 
-          flow_ids = @flow_paths_filter.call.select(:flow_id).distinct
-          @query = @query.where(flow_id: flow_ids)
+        def filter_by_countries
+          return unless @countries_ids.any?
+
+          @query = @query.where(country_id: @countries_ids)
+          @filtered = true
+        end
+
+        def filter_by_commodities
+          return unless @commodities_ids.any?
+
+          @query = @query.where(commodity_id: @commodities_ids)
+          @filtered = true
+        end
+
+        def filter_by_nodes
+          return unless @node_ids.any?
+
+          @query = @query.where(node_id: @node_ids)
+          @filtered = true
+        end
+
+        def filter_by_node_types
+          return unless @node_types_ids.any?
+
+          @query = @query.where(node_type_id: @node_types_ids)
+          @filtered = true
         end
       end
     end
